Wrap up fixture service and hook up operations

--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,10 @@
   font-weight: bold;
 }
 
-.wc-dashboard .next-up {
+.wc-dashboard .match-list {
   margin-top: 1rem;
 }
 
-.wc-dashboard .next-match {
+.wc-dashboard .match-deets {
   font-size: 1.25rem;
 }
